--- a/package.json
+++ b/package.json
@@ -2,6 +2,25 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts-ts-antd build",
+    "eject": "react-scripts-ts-antd eject",
+    "start": "react-scripts-ts-antd start",
+    "test": "react-scripts-ts-antd test --env=jsdom"
+  },
+  "dependencies": {
+    "antd": "^3.14.1",
+    "axios": "^0.18.0",
+    "hoist-non-react-statics": "^3.3.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts-antd": "2.17.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "typescript": "^3.3.3333"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.5",
@@ -9,25 +28,6 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.2",
     "@types/react-router": "^4.4.4",
-    "react-redux": "^6.0.1",
-    "react-scripts-ts-antd": "2.17.0",
-    "redux": "^4.0.1",
-    "typescript": "^3.3.3333"
-  },
-  "dependencies": {
-    "@types/react-router-dom": "^4.3.1",
-    "antd": "^3.14.1",
-    "axios": "^0.18.0",
-    "hoist-non-react-statics": "^3.3.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^4.3.1",
-    "redux-saga": "^1.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts-ts-antd start",
-    "build": "react-scripts-ts-antd build",
-    "test": "react-scripts-ts-antd test --env=jsdom",
-    "eject": "react-scripts-ts-antd eject"
+    "@types/react-router-dom": "^4.3.1"
   }
 }
