--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
   directories:
     - node_modules
 install:
-  - npm install
+  - npm install -g cnpm --registry=https://registry.npm.taobao.org
+  - cnpm install
 scripts:
   - npm build
