--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,7 @@ scripts:
   - npm test
 after_success:
   # 登录服务器，执行部署脚本，其实最好把后面一串写成 shell 文件
-  - ssh root@47.106.87.3 -o StrictHostKeyChecking=no
-  - cd /home/root/TodoList
-  - git pull
-  - npm install -g cnpm --registry=https://registry.npm.taobao.org
-  - cnpm i
-  - npm run build
+  - ssh root@47.106.87.3 -o StrictHostKeyChecking=no 'cd /home/root/TodoList && git pull && npm i && npm run build'
   - cd server
-  - cnpm i
+  - npm i
   - pm2 restart TodoList
