--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,16 @@ before_install:
   - eval "$(ssh-agent -s)"
   # 给予 id_rsa 文件权限，避免警告
   - chmod 600 ~/.ssh/id_rsa
+  - echo -e "Host 47.106.87.3\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   # 将私钥添加到 ssh
   - ssh-add ~/.ssh/id_rsa
-install: true
-scripts: true
+script:
+  - npm run test
 after_success:
-  # 登录服务器，执行部署脚本，其实最好把后面一串写成 shell 文件
-  - ssh root@47.106.87.3 -o StrictHostKeyChecking=no 'cd /home/root/TodoList && git pull && npm i && npm run build'
-  - ssh root@47.106.87.3 -o StrictHostKeyChecking=no 'cd /home/root/TodoList/server && npm i'
-  - ssh root@47.106.87.3 -o StrictHostKeyChecking=no 'cd /home/root/TodoList/server && pm2 restart TodoList'
+  - npm install -g cnpm --registry=https://registry.npm.taobao.org
+  - cnpm i
+  - npm run build
+  - tar -zcvf build.tar.gz build
+  - scp build.tar.gz root@47.106.87.3:/home/root/TodoList
+  - ssh root@47.106.87.3 'cd /home/root/TodoList && tar -zxvf build.tar.gz'
+  - ssh root@47.106.87.3 'pm2 restart TodoList'
