--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 script:
   - npm run test
 after_success:
+  - npm prune --production # 删除devDependencies
   - npm install -g cnpm --registry=https://registry.npm.taobao.org
   - cnpm i
   - npm run build
