--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ before_install:
   - echo -e "Host 47.106.87.3\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   # 将私钥添加到 ssh
   - ssh-add ~/.ssh/id_rsa
+install:
+  - npm i -g npm@6
+  - npm ci
 script:
   - npm run test
 after_success:
-  - npm prune --production # 删除devDependencies
   - npm install -g cnpm --registry=https://registry.npm.taobao.org
   - cnpm i
   - npm run build
