--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branchs:
 addons:
   ssh_known_hosts:
     - 47.106.87.3
+cache:
+  directories:
+    - node_modules
 before_install:
   - openssl aes-256-cbc -K $encrypted_0ec4f66d4059_key -iv $encrypted_0ec4f66d4059_iv -in id_rsa.enc -out ~/.ssh/id_rsa -d
   # 开启 ssh-agent，即允许使用 ssh 命令
@@ -16,14 +19,11 @@ before_install:
   - echo -e "Host 47.106.87.3\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   # 将私钥添加到 ssh
   - ssh-add ~/.ssh/id_rsa
-install:
-  - npm install -g cnpm --registry=https://registry.npm.taobao.org
-  - cnpm i
-script:
+scripts:
   - npm run test
-after_success:
   - npm run build
   - tar -zcvf build.tar.gz build
+after_success:
   - scp build.tar.gz root@47.106.87.3:/home/root/TodoList
-  - ssh root@47.106.87.3 'cd /home/root/TodoList && tar -zxvf build.tar.gz && git pull'
+  - ssh root@47.106.87.3 'cd /home/root/TodoList && tar -zxvf build.tar.gz && rm -rf build.tar.gz && git pull'
   - ssh root@47.106.87.3 'curl -L https://npmjs.org/install.sh | sudo sh && npm i pm2 -g && pm2 restart TodoList'
