--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ before_install:
   - echo -e "Host 47.106.87.3\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   # 将私钥添加到 ssh
   - ssh-add ~/.ssh/id_rsa
+install:
+  - npm install -g cnpm --registry=https://registry.npm.taobao.org
+  - cnpm i
 scripts:
   - npm run test
   - npm run build
