--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && node dist/app.js",
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' app.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,13 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^5.4.12"
+    "mongoose": "^5.4.12",
+    "typescript": "^3.5.1"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.0.40",
+    "@types/koa2-cors": "^2.0.1"
   }
 }
