--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && node dist/app.js",
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' app.ts"
+    "dev": "nodemon --watch './**/*' -e ts,tsx --exec 'ts-node' app.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.0.40",
-    "@types/koa2-cors": "^2.0.1"
+    "@types/koa2-cors": "^2.0.1",
+    "@types/mongoose": "^5.5.6"
   }
 }
