--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ after_success:
   - tar -zcvf build.tar.gz build
   - scp build.tar.gz root@47.106.87.3:/home/root/TodoList
   - ssh root@47.106.87.3 'cd /home/root/TodoList && tar -zxvf build.tar.gz && rm -rf build.tar.gz && git pull'
-  - ssh root@47.106.87.3 'curl -L https://npmjs.org/install.sh | sudo sh'
-  - ssh root@47.106.87.3 'cd /home/root/TodoList/server && tsc'
-  - ssh root@47.106.87.3 'npm install -g cnpm --registry=https://registry.npm.taobao.org && cnpm i pm2 -g && pm2 restart TodoList'
+  - ssh root@47.106.87.3 'curl -L https://npmjs.org/install.sh | sudo sh && npm install -g cnpm --registry=https://registry.npm.taobao.org'
+  - ssh root@47.106.87.3 'cnpm i typescript -g && cd /home/root/TodoList/server && tsc'
+  - ssh root@47.106.87.3 'cnpm i pm2 -g && pm2 restart TodoList'
