--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -33,7 +33,7 @@
     // ]
   },
   // file include会算出一个交集, 指明哪些是项目的 ts 文件
-  "include": ["./**/*"],
+  "include": ["./src/**/*"],
   // 排除项目下面不符合要求的文件，这个按需设定即可，可以放心排除乱七八糟的文件
   "exclude": ["node_modules", "**/*.spec.ts", "*.js"]
 }
