--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-react-app": "^3.1.1",
+    "caniuse-lite": "^1.0.30000974",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
