--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.2.0",
+    "axios": "^0.19.2",
+    "moment": "2.24.0",
+    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "~3.7.2"
+  },
+  "resolutions": {
+    "moment": "2.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
