--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "antd-demo-ts",
-  "version": "0.1.0",
+  "name": "TodoList",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
