--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 
 # production
 /build
-/server/dist
 
 # misc
 .DS_Store
@@ -19,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
