--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "start": "ts-node ./src/app.ts",
     "watch": "nodemon",
     "build": "tsc",
-    "serve": "node dist/app.js",
-    "format": "prettier --write \"./src/**/*.ts\""
+    "serve": "node dist/app.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -24,21 +23,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "koa2-cors": "^2.0.6",
-    "mongoose": "^5.4.12",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.9.2"
+    "@koa/cors": "^3.1.0",
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.12.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/koa": "^2.0.48",
+    "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.0.40",
-    "@types/koa2-cors": "^2.0.1",
-    "@types/mongoose": "^5.5.6",
-    "@types/node": "^12.0.8",
-    "prettier": "^2.0.4"
+    "@types/koa-router": "^7.4.1",
+    "@types/koa__cors": "^3.0.2",
+    "@types/node": "^12.0.8"
   }
 }
