--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "watch": [
       "src"
     ],
-    "exec": "npm start",
+    "exec": "yarn start",
     "ext": "ts"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "mongoose": "^5.12.2",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
